2010-12-24  Nicola Pero <nicola.pero@meta-innovation.com>

	* Headers/Foundation/NSPropertList.h: Forward-declare the NSError
	class if appropriate.

2010-12-24  Nicola Pero <nicola.pero@meta-innovation.com>

	* Source/NSObject.m ([+conformsToProtocol:]): Use the new code
	only if __GNU_LIBOBJC__ is defined.
	* Source/Additions/GSObjCRuntime.m (GSTypesFromSelector): Updated
	usage of Modern typed selector API with __GNU_LIBOBJC__.
	* Source/GSFFIInvocation.m (gs_find_best_typed_sel): Same.
	(gs_objc_msg_forward2): Same.
	(GSFFIInvocationCallback): Same.
	
2010-12-24  Nicola Pero <nicola.pero@meta-innovation.com>

	* Source/NSObject.m ([+conformsToProtocol:]): Fixed to iterate
	over superclasses.  Just calling class_conformsToProtcol() is not
	enough as class_conformsToProtocol() does not iterate over
	superclasses.
	([-conformsToProtocol:]): Updated.

2010-12-23  Nicola Pero <nicola.pero@meta-innovation.com>

	* configure.ac: Check for objc_setUncaughtExceptionHandler().
	* configure: Regenerated.
	* Headers/Additions/GNUstepBase/config.h.in: Regenerated.
	* config/config..setUncaughtExceptionHandler.m: New.
	* Source/Additions/GSObjCRuntime.m (GSTypesFromSelector): Use
	sel_getType, not sel_getType_np, if __GNU_LIBOBJC__.
	(GSSelectorFromNameAndTypes): Use sel_registerTypedName, not
	sel_registerTypedName_np, if __GNU_LIBOBJC__.
	* Source/objc-load.h: Do not include objc-api.h.
	* Source/NSBundle.m (_bundle_load_callback): Use the new API to
	iterate over classes when __GNU_LIBOBJC__.
	* Source/NSConnection.m ([NSConnection
	-forwardInvocation:forProxy:]): Use sel_registerTypedName, not
	sel_registerTypedName_np, if __GNU_LIBOBJC__.
	* Source/NSData.m ([NSData
	-deserializeDataAt:ofObjCType:atCursor:context:]): Use
	sel_registerTypedName, not sel_registerTypedName_np, if
	__GNU_LIBOBJC__.  Use sel_registerName, not
	sel_registerTypedName_np, if the type is 0.
	([NSDataStatic -deserializeDataAt:ofObjCType:atCursor:context:]):